--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ rvm:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y build-essential libsdl2-dev libsdl2-ttf-dev libpango1.0-dev libgl1-mesa-dev libopenal-dev libsndfile-dev
+test:
+  - bundle exec rspec
