--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ rvm:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y build-essential libsdl2-dev libsdl2-ttf-dev libpango1.0-dev libgl1-mesa-dev libopenal-dev libsndfile-dev
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - bundle exec rspec
